task: Fix Sonar issues [DHIS2-18477]